* Fixed annoying alignment of edit/view

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,6 +45,8 @@ main#main-card {
     tab-size: 2;
 
     font-family: 'Roboto Mono', monospace !important;
+
+    padding-top: 2rem;
 }
 
 #pad-content-area {
@@ -59,6 +61,7 @@ main#main-card {
 }
 
 .read-only-content .edit-content-text {
+    margin-top: 1rem;
     display: block !important;
 }
 
@@ -78,6 +81,9 @@ main#main-card {
     max-height: calc(17rem + 30vh);
     min-height: 17rem;
     overflow: auto;
+
+    padding-top: 2rem;
+    margin-top: 1rem;
 }
 
 textarea:focus,
